--- a/.github/workflows/dependency-graph.yml
+++ b/.github/workflows/dependency-graph.yml
@@ -3,7 +3,7 @@ name: Update Dependency Graph
 on:
   push:
     branches:
-      - main # default branch of the project
+      - master # default branch of the project
 jobs:
   dependency-graph:
     name: Update Dependency Graph
