--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -20,12 +20,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 8
-      uses: actions/setup-java@v3
+    - uses: actions/checkout@v5.0.0
+    - name: Set up JDK 11
+      uses: actions/setup-java@v5.0.0
       with:
-        java-version: '8'
+        java-version: '11'
         distribution: 'temurin'
         cache: 'sbt'
-    - name: Run tests
-      run: sbt test
+    - name: Setup sbt launcher
+      uses: sbt/setup-sbt@v1
+    - name: Run package
+      run: sbt test package
