--- a/.github/workflows/dependency-graph.yml
+++ b/.github/workflows/dependency-graph.yml
@@ -1,13 +1,17 @@
-# .github/workflows/dependency-graph.yml
-name: Update Dependency Graph
 on:
-  push:
-    branches:
-      - master # default branch of the project
+  schedule:
+    - cron: '0 0 * * 0'
+
+name: Scala Steward
+
+permissions:
+  contents: write
+  pull-requests: write
+
 jobs:
-  dependency-graph:
-    name: Update Dependency Graph
+  scala-steward:
     runs-on: ubuntu-latest
+    name: Scala Steward
     steps:
-      - uses: actions/checkout@v3
-      - uses: scalacenter/sbt-dependency-submission@v2.3.1
+      - name: Scala Steward
+        uses: scala-steward-org/scala-steward-action@v2
