--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -30,4 +30,4 @@ jobs:
     - name: Setup sbt launcher
       uses: sbt/setup-sbt@v1
     - name: Run package
-      run: sbt test package
+      run: sbt package
